enlace a azure y agregación de embeddings

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
-fastapi
-uvicorn
-python-multipart
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
 jinja2
 aiofiles
 itsdangerous
-python-dotenv
+python-dotenv==1.0.0
 requests
 httpx
 starlette
 fastapi[all]
-passlib[bcrypt]
-python-jose[cryptography]
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
 pydantic
-neo4j
+neo4j==5.14.1
 email-validator
+azure-storage-blob==12.19.0
+resemblyzer==0.1.1
+librosa==0.10.1
+numpy==1.26.2
