--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,13 @@
 fastapi==0.109.2
 uvicorn==0.27.1
 python-multipart==0.0.9
-jinja2==3.1.2
-aiofiles==23.2.1
-itsdangerous==2.1.2
-python-dotenv==1.0.1
-requests==2.31.0
-httpx==0.25.2
-starlette==0.27.0
-fastapi[all]
-passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
 pydantic==2.6.1
+pymongo==4.6.1
+python-dotenv==1.0.1
+azure-storage-blob==12.19.0
 numpy==1.26.4
 librosa==0.10.1
-resemblyzer==0.1.1
-azure-storage-blob==12.19.0
-pymongo==4.6.1
-PyJWT==2.8.0
-webrtcvad==2.0.10
-email-validator==2.1.0.post1
+resemblyzer==0.1.4
+scipy==1.12.0 
