probando is environment

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ AZURE_STORAGE_CONTAINER_NAME=daw
 
 # URLs
 FRONTEND_URL=https://daw-frontend.vercel.app
-PRODUCTION_URL=https://daw-backend.onrender.com
+PRODUCTION_URL=https://dawbackend-production.up.railway.app
 
 # Configuración de voz
 VOICE_SIMILARITY_THRESHOLD=0.75
